- Search bar fixed on mobile - Profile/Game main images fixed on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -88,10 +88,17 @@ nav {
   border-radius: 5px 0 0 5px;
 }
 
+select{-webkit-appearance: none;}
+
 .nav-search select {
+  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='20' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: 100%;
+  background-position-y: 5px;
   background-color: #EFEFEF;
+  color: black;
   float: left;
-  padding: 0.4rem;
+  padding: 0.46rem 1.4rem 0.46rem 0.4rem;
   border: none;
 }
 
@@ -323,15 +330,15 @@ nav {
 }
 
 .main-img {
+  object-fit: contain;
   max-width: 224px;
-  height: 100%;
   margin-right: 2rem;
   border-radius: 5px;
 }
 
 .main-img-interactive {
+  object-fit: contain;
   max-width: 224px;
-  height: 100%;
   margin-right: 2rem;
   border-radius: 5px;
 }
